archive/v0.11.0/_sources/index.rst.txt
..
    Copyright (c) 2021 - present / Neuralmagic, Inc. All Rights Reserved.

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing,
    software distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.

==========================
Neural Magic Documentation
==========================

Neural Magic’s Deep Sparse Platform provides a suite of software components to select, build, and run performant deep learning models on CPU resources.

.. raw:: html

    <div style="margin-bottom:16px;">
        <a href="https://join.slack.com/t/discuss-neuralmagic/shared_invite/zt-q1a1cnvo-YBoICSIw3L1dmQpjBeDurQ/">
        <img src="https://img.shields.io/badge/slack-purple?style=for-the-badge&logo=slack" height=25>
        </a>
        <a href="https://discuss.neuralmagic.com/">
        <img src="https://img.shields.io/badge/support%20forums-navy?style=for-the-badge&logo=discourse" height=25>
        </a>
        <a href="https://github.com/neuralmagic/docs/blob/main/CODE_OF_CONDUCT.md">
            <img alt="Contributor Covenant" src="https://img.shields.io/badge/Contributor%20Covenant-v2.1%20adopted-ff69b4.svg?color=yellow&style=for-the-badge" height=25 style="margin-bottom:4px;">
        </a>
         <a href="https://www.youtube.com/channel/UCo8dO_WMGYbWCRnj_Dxr4EA">
            <img src="https://img.shields.io/badge/-YouTube-red?&style=for-the-badge&logo=youtube&logoColor=white" height=25 style="margin-bottom:4px;">
        </a>
         <a href="https://medium.com/limitlessai">
            <img src="https://img.shields.io/badge/medium-%2312100E.svg?&style=for-the-badge&logo=medium&logoColor=white" height=25 style="margin-bottom:4px;">
        </a>
        <a href="https://twitter.com/neuralmagic">
            <img src="https://img.shields.io/twitter/follow/neuralmagic?color=darkgreen&label=Follow&style=social" height=25 style="margin-bottom:4px;">
        </a>
     </div>

To learn more about specific projects founded by Neural Magic, check out documentation links below.

To file a docs issue for a specific software component, use its repo issue tracker.

+-------------------------------------------------------------------+--------------------------------------------------------+----------------------------------------------------------------+------------------------------------------------------------------+---------------------+
| Docs                                                              | GitHub                                                 | Issue Tracker                                                  | Releases                                                         | License             |
+===================================================================+========================================================+================================================================+==================================================================+=====================+
| `SparseML <https://docs.neuralmagic.com/archive/sparseml />`_             | `Repo <https://github.com/neuralmagic/sparseml />`_    | `Queue <https://github.com/neuralmagic/sparseml/issues />`_    | `Index <https://github.com/neuralmagic/sparseml/releases />`_    | Apache 2.0          |
+-------------------------------------------------------------------+--------------------------------------------------------+----------------------------------------------------------------+------------------------------------------------------------------+---------------------+
| `Sparsify <https://docs.neuralmagic.com/archive/sparsify />`_             | `Repo <https://github.com/neuralmagic/sparsify />`_    | `Queue <https://github.com/neuralmagic/sparsify/issues />`_    | `Index <https://github.com/neuralmagic/sparsify/releases />`_    | Apache 2.0          |
+-------------------------------------------------------------------+--------------------------------------------------------+----------------------------------------------------------------+------------------------------------------------------------------+---------------------+
| `SparseZoo <https://docs.neuralmagic.com/archive/sparsezoo />`_           | `Repo <https://github.com/neuralmagic/sparsezoo />`_   | `Queue <https://github.com/neuralmagic/sparsezoo/issues />`_   | `Index <https://github.com/neuralmagic/sparsezoo/releases />`_   | Apache 2.0          |
+-------------------------------------------------------------------+--------------------------------------------------------+----------------------------------------------------------------+------------------------------------------------------------------+---------------------+
| `DeepSparse Engine <https://docs.neuralmagic.com/archive/deepsparse />`_  | `Repo <https://github.com/neuralmagic/deepsparse />`_  | `Queue <https://github.com/neuralmagic/deepsparse/issues />`_  | `Index <https://github.com/neuralmagic/deepsparse/releases />`_  | Neural Magic Engine |
+-------------------------------------------------------------------+--------------------------------------------------------+----------------------------------------------------------------+------------------------------------------------------------------+---------------------+

For user help or questions, sign up or log in to our `Deep Sparse Community Slack <https://join.slack.com/t/discuss-neuralmagic/shared_invite/zt-q1a1cnvo-YBoICSIw3L1dmQpjBeDurQ />`_. We are growing the community member by member and happy to see you there. Bugs, feature requests, or additional questions can also be posted to our `GitHub Issue Queues <https://github.com/neuralmagic />`_ for the related repository.


To contribute to Neural Magic documentation, please:

- Open a `GitHub issue <https://github.com/neuralmagic/docs/issues />`_ and give it the `documentation` label.
- Submit a `pull request <https://github.com/neuralmagic/docs/pulls />`_ with your proposed documentation changes.
- Get started with `writing and formatting on GitHub. <https://help.github.com/en/github/writing-on-github/getting-started-with-writing-and-formatting-on-github />`_

To learn more about Neural Magic, `check our our website. <https://www.neuralmagic.com />`_


.. toctree::
    :maxdepth: 3
    :caption: Get Started

    source/getstarted

.. toctree::
    :maxdepth: 3
    :caption: Sparse Models

    ResNet-50 <https://sparsezoo.neuralmagic.com/getting-started/resnet_v1-50>
    MobileNetV1 <https://sparsezoo.neuralmagic.com/getting-started/mobilenet_v1-1.0>
    YOLOv5 <https://sparsezoo.neuralmagic.com/getting-started/yolov5>
    YOLOv3 <https://sparsezoo.neuralmagic.com/getting-started/yolov3>
    BERT <https://sparsezoo.neuralmagic.com/getting-started/bert>

.. toctree::
    :maxdepth: 3
    :caption: Details

    Technical Papers <https://neuralmagic.com/resources/technical-papers>
    source/faqs
    source/glossary


.. toctree::
    :maxdepth: 3
    :caption: Connect Online

    Bugs, Feature Requests <https://github.com/neuralmagic/docs/issues>
    Deep Sparse Community <https://join.slack.com/t/discuss-neuralmagic/shared_invite/zt-q1a1cnvo-YBoICSIw3L1dmQpjBeDurQ/>
    Neural Magic GitHub <https://github.com/neuralmagic>
    Neural Magic Docs <https://docs.neuralmagic.com>

